--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<article>
+    <p>This is the first paragraph.</p>
+	<p>This is the first paragraph.sadcfdsafsfgsdgdgdfgdf</p>
+    <p>This is the second paragraph.</p>
+    <p>This is the third paragraph.</p>
+  </article>
+  <ul>
+    <li>First Item</li>
+    <li>Second Item</li>
+    <li>Third Item</li>
+    <li>Fourth Item</li>
+    <li>Fifth Item</li>
+  </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
